[project]
name = "moderngraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Mostafa Sobhy", email = "Mostafa.Sobhy@outlook.de" }]
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]

[project.scripts]
moderngraph = "moderngraph:main"

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["ipykernel>=7.2.0", "pytest>=9.0.3", "ruff>=0.15.12"]
