[project]
name = "moderngraph"
dynamic = ["version"]
description = "A modern, lightweight Python plotting library for modern, clean, highly customizable data visualizations."
readme = "README.md"
authors = [{ name = "Mostafa Sobhy", email = "Mostafa.Sobhy@outlook.de" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "pandas>=2.0.0",
    "polars>=1.40.1",
    "pyarrow>=24.0.0",
    "seaborn>=0.13.2",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
]
license = { file = "LICENSE" }

[project.scripts]
moderngraph = "moderngraph:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/moderngraph/__init__.py"

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.12",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
addopts = "--cov=src/moderngraph --cov-report=xml --cov-report=term --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/moderngraph"]
